homepage spacing fixed

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -84,9 +84,7 @@ html {
     color: black;
     border: 1px solid black;
 }
-#CONTACT button {
-    border: 1px solid black;
-}
+
 
 video#bgvid {
 position: absolute; right: 0; bottom: 0;
@@ -134,7 +132,7 @@ nav a:hover {
 #THEME .section-name {
     background: url('/static/img/ink-circle.png') no-repeat center center;
     background-size: 30%;
-    padding: 15em;
+    padding: 8em;
     color: black;
 }
 #THEME ul {
@@ -212,7 +210,7 @@ nav a:hover {
 #AGENDA .section-name {
     background: url('/static/img/ink-upperstroke.png') no-repeat 50% 100%;
     background-size: 50%;
-    padding: 20em 0em 14em 0em;
+    padding: 7em 0em 7em 0em;
     color: black;
 }
 #AGENDA .fa {
@@ -249,7 +247,7 @@ nav a:hover {
     opacity: 1;
 }
 #agenda-icon {
-    padding: 3em;
+    padding: 0em;
 }
 /********************ABOUT SECTION***********************************************/
 
@@ -258,40 +256,57 @@ nav a:hover {
 	background: url('/static/img/whole-team.jpg') no-repeat top center;
 	background-size: 180%;
 	color: white;
-	margin-bottom: 20em;
 }
 
 #ABOUT .in-parallax-text {
-    padding-left: 40%;
-    margin: 10%;
+    margin: 25% 0 20% 0;
     text-align: right;
 }
 
-/**************************DIRECTIONS*************************************/
+#ABOUT h4{
+    padding: 0em 0em 2em 0em;
+}
+/**************************TICKETS*************************************/
 
-#DIRECTIONS {
-
+#TICKETS {
 	background: url('/static/img/cu.jpg') no-repeat top center;
 	background-size: cover;
 	color: white;
 }
-#DIRECTIONS .in-parallax-text {
-    margin: 10%;
-    padding-right: 34%;
+
+#TICKETS .in-parallax-text {
+    margin: 25% 0 20% 0;
+    text-align: left;
 }
 
+#TICKETS h4{
+    padding: 0em 0em 2em 0em;
+}
 
+/**************************DIRECTION*************************************/
+#DIRECTIONS {
+    margin: 12em; 0em; 12em; 0em;
+}
+
+#DIRECTIONS button {
+    border: 1px solid black;
+    color: black;   
+}
+
+#DIRECTIONS h4{
+    padding: 0em 0em 2em 0em;
+}
 
 /************************SPONSORSHIP***********************************/
 
 #SPONSORSHIP {
-    margin-bottom: 10em;
+     margin: 12em; 0em; 10em; 0em;
 }
 #SPONSORSHIP .fa {
     color: black;
 }
 #SPONSORSHIP h1{
-    padding: 2em 2em 1em 2em;
+    padding-bottom: 3em;
 }
 /***********************PRE_FOOTER************************************/
 
